[gd_scene load_steps=35 format=3 uid="uid://cac7s21gtcba8"]

[ext_resource type="PackedScene" uid="uid://ci1t3lpmt68a2" path="res://scenes/player/player.tscn" id="1_1afv7"]
[ext_resource type="Script" path="res://scenes/player/FishingPlayer.gd" id="2_qwu5m"]
[ext_resource type="PackedScene" uid="uid://0obt0ysdxga4" path="res://tools/minigames/fishing/fishing_rod/fishing_rod.tscn" id="3_ptm30"]
[ext_resource type="Texture2D" uid="uid://dnlfugi4bdg57" path="res://tools/minigames/fishing/assets/spritesheet_mini_cecilia_fishing_cast.png" id="4_apfq8"]
[ext_resource type="Texture2D" uid="uid://dqdc5jtw037og" path="res://tools/minigames/fishing/assets/spritesheet_mini_cecilia_fishing_idle.png" id="5_dex1r"]
[ext_resource type="Texture2D" uid="uid://bgkaa7x1ip882" path="res://assets/mc.png" id="6_g3q3r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_27mii"]
atlas = ExtResource("4_apfq8")
region = Rect2(19, 0, 196, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_dloha"]
atlas = ExtResource("4_apfq8")
region = Rect2(215, 0, 196, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lf6t"]
atlas = ExtResource("4_apfq8")
region = Rect2(411, 0, 196, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuask"]
atlas = ExtResource("4_apfq8")
region = Rect2(607, 0, 196, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_occjj"]
atlas = ExtResource("4_apfq8")
region = Rect2(803, 0, 196, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_piabr"]
atlas = ExtResource("4_apfq8")
region = Rect2(1005, 0, 195, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_btsik"]
atlas = ExtResource("5_dex1r")
region = Rect2(0, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv3g6"]
atlas = ExtResource("5_dex1r")
region = Rect2(200, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t3x0"]
atlas = ExtResource("5_dex1r")
region = Rect2(400, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vsjw"]
atlas = ExtResource("5_dex1r")
region = Rect2(600, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_02y66"]
atlas = ExtResource("5_dex1r")
region = Rect2(800, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_arllk"]
atlas = ExtResource("5_dex1r")
region = Rect2(1000, 0, 200, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_yshiy"]
atlas = ExtResource("6_g3q3r")
region = Rect2(0, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxwx6"]
atlas = ExtResource("6_g3q3r")
region = Rect2(125, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e5qb"]
atlas = ExtResource("6_g3q3r")
region = Rect2(250, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5vx"]
atlas = ExtResource("6_g3q3r")
region = Rect2(375, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qymx"]
atlas = ExtResource("6_g3q3r")
region = Rect2(500, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaapu"]
atlas = ExtResource("6_g3q3r")
region = Rect2(625, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkui4"]
atlas = ExtResource("6_g3q3r")
region = Rect2(750, 250, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kt33"]
atlas = ExtResource("6_g3q3r")
region = Rect2(0, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16wi"]
atlas = ExtResource("6_g3q3r")
region = Rect2(125, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_unmog"]
atlas = ExtResource("6_g3q3r")
region = Rect2(250, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_13vst"]
atlas = ExtResource("6_g3q3r")
region = Rect2(375, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4rti"]
atlas = ExtResource("6_g3q3r")
region = Rect2(500, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxs3x"]
atlas = ExtResource("6_g3q3r")
region = Rect2(625, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_lysmj"]
atlas = ExtResource("6_g3q3r")
region = Rect2(750, 0, 125, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_n70d7"]
atlas = ExtResource("6_g3q3r")
region = Rect2(875, 0, 125, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_pq85j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dloha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lf6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuask")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_occjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piabr")
}],
"loop": false,
"name": &"fishing_cast",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btsik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv3g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t3x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vsjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02y66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arllk")
}],
"loop": true,
"name": &"fishing_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yshiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxwx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e5qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qymx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaapu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkui4")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kt33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s16wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unmog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13vst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4rti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxs3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lysmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n70d7")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="FishingPlayer" instance=ExtResource("1_1afv7")]
script = ExtResource("2_qwu5m")

[node name="Sprite3D" parent="." index="2"]
visible = false

[node name="FishingRod" parent="." index="4" instance=ExtResource("3_ptm30")]
transform = Transform3D(-4.37114e-08, 1, -6.17269e-17, -0.00254793, -1.11396e-10, -0.999998, -0.999997, -4.37113e-08, 0.00254848, 0.270332, 0.337995, 0.0667055)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="." index="5"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 5.32907e-15, 0, -5.32907e-15, 0.5, 0, 0, 0)
sprite_frames = SubResource("SpriteFrames_pq85j")
animation = &"fishing_cast"

[connection signal="casting_anim_done" from="." to="." method="_on_casting_anim_done"]
[connection signal="fishing_time" from="." to="FishingRod" method="_on_fishing_player_fishing_time"]
[connection signal="walking_time" from="." to="FishingRod" method="_on_fishing_player_walking_time"]
[connection signal="bobber_enter_water" from="FishingRod" to="." method="_on_fishing_rod_bobber_enter_water"]
[connection signal="fishing_ends" from="FishingRod" to="." method="_on_fishing_rod_fishing_ends"]
